gitops/app/base/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sec-app
  labels:
    pod-security.kubernetes.io/audit: baseline
