gitops/app/base/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  labels:
    app: mongo-todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-todo
      tier: backend
  template:
    metadata:
      labels:
        app: mongo-todo
        tier: backend
    spec:
      serviceAccountName: sec-app-sa
      containers:
        - name: web
          image: us-central1-docker.pkg.dev/clgcporg10-170/sec-app/todo:v2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
