gitops/app/base/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  labels:
    app: mongo-todo
spec:
  selector:
    app: mongo-todo
    tier: backend
  ports:
    - name: http
      port: 80
      targetPort: http
  type: LoadBalancer
