gitops/app/base/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-mongo
  namespace: sec-app
spec:
  podSelector:
    matchLabels:
      app: mongo-todo
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 10.10.100.0/24
      ports:
        - port: 27017
